--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "author": "Vaibhav Shukla",
   "license": "ISC",
   "dependencies": {
-    "venom-bot": "3.0.11",
+    "venom-bot": "^3.0.14",
     "ws": "7.4.4"
   },
   "devDependencies": {
