--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Vaibhav Shukla",
+  "author": "Saif",
   "license": "ISC",
   "dependencies": {
-    "venom-bot": "^3.0.14",
+    "venom-bot": "4.0.7",
     "ws": "7.4.4"
   },
   "devDependencies": {
